<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/AppTheme.EditLayout"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <com.google.android.material.appbar.AppBarLayout
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/tp_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_back_spanish"
                app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
                app:menu="@menu/menu"
                style="@style/Widget.MaterialComponents.Toolbar.Surface"
                app:titleTextColor="@color/design_default_color_primary"
                app:navigationIconTint="@color/design_default_color_primary" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tvOffices"
            style="@style/AppTheme.EditTextStyleBoldMedium"
            app:layout_constraintTop_toBottomOf="@id/tp_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/menu_offices_spanish"
            android:textColor="@color/dark_gray"
            android:textAlignment="center"
            />


        <fragment
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/map"
            tools:context= ".MainActivity"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            app:layout_constraintTop_toBottomOf="@+id/tvOffices"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/menuOffices"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            app:layout_constraintStart_toStartOf="@+id/map"
            app:layout_constraintEnd_toEndOf="@+id/map"
            app:layout_constraintTop_toTopOf="@+id/map"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            >

            <AutoCompleteTextView
                android:layout_height="wrap_content"
                style="@style/AppTheme.EditTextStyleRegularMedium"
                android:inputType=""
                android:hint="@string/send_city_spanish"
                android:id="@+id/atiCityLocation"
                app:layout_constraintStart_toStartOf="@+id/map"
                app:layout_constraintEnd_toEndOf="@+id/map"
                app:layout_constraintTop_toTopOf="@+id/map"
                android:drawableStart="@drawable/ic_baseline_search_24"
                android:singleLine="true"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/officeCard"
            style="@style/AppTheme.EditCard"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/menuOffices"
            app:layout_constraintStart_toStartOf="@+id/menuOffices"
            android:padding="8dp"
            >
            <LinearLayout
                android:orientation="vertical"
                style="@style/AppTheme.EditLayout"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvMap"
                    style="@style/AppTheme.EditTextStyleRegularMedium"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>